--- a/services/sales_payment/Dockerfile
+++ b/services/sales_payment/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile für den Service (z.B. user_management_service)
+# Dockerfile für jeden Service
 
 FROM python:3.9-slim
 WORKDIR /app
@@ -7,6 +7,10 @@ WORKDIR /app
 RUN apt-get update && \
     apt-get install -y default-libmysqlclient-dev gcc && \
     rm -rf /var/lib/apt/lists/*
+
+# Kopiere das wait-for-it-Skript und setze die Ausführungsberechtigung
+COPY ../../wait-for-it.sh /app/wait-for-it.sh
+RUN chmod +x /app/wait-for-it.sh
 
 # Kopiere requirements.txt und installiere Abhängigkeiten
 COPY requirements.txt .
