--- a/services/return_refund/Dockerfile
+++ b/services/return_refund/Dockerfile
@@ -17,4 +17,4 @@ COPY . .
 COPY ../../wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
-CMD ["./wait-for-it.sh", "db:3306", "--", "python", "app.py"]
+CMD ["./wait-for-it.sh", "return_refund_db:3306", "--", "python", "app.py"]
