add global to .env

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# Global MariaDB root password
+MARIADB_ROOT_PASSWORD=root_password
+
 # User Management Service
 USER_DB_USER=root
 USER_DB_PASSWORD=root_password
